--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.4",
+    "@mui/x-date-pickers": "^8.0.0-beta.3",
+    "@toolpad/core": "^0.14.0",
+    "dayjs": "^1.11.13",
     "next": "15.1.6",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
